--- a/application/views/default/wiki/css/ui.tabs.css
+++ b/application/views/default/wiki/css/ui.tabs.css
@@ -1,17 +1,3 @@
-/*
-|---------------------------------------------------------------
-| STYLESHEET - UI.TABS
-|---------------------------------------------------------------
-|
-| File: default/main/css/ui.tabs.css
-| Author: David VanScott [davidv@anodyne-productions.com]
-| Version: 1.0
-|
-| Stylesheet that controls the look and feel of the tabs throughout
-| the system
-|
-*/
-
 /* Caution! Ensure accessibility in print and other media types... */
 @media projection, screen { /* Use class for showing/hiding tab content */
     .ui-tabs-hide {
@@ -33,14 +19,22 @@
 }
 
 #one, #two, #three, #four, #five,
-#six, #seven, #eight, #nine, #ten { clear: left; }
+#six, #seven, #eight, #nine, #ten,
+#eleven, #twelve { clear: left; }
 
 /* Skin */
 .ui-tabs-nav {
     margin: 0;
     padding: 0;
+    height: 28px;
+	line-height: 28px;
     
     list-style: none;
+    border: 1px solid #ddd !important;
+    background: #eee !important;
+    
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
 }
 .ui-tabs-nav:after { /* clearing without presentational markup, IE gets extra treatment */
     display: block;
@@ -49,12 +43,12 @@
 }
 .ui-tabs-nav li {
     float: left;
-    margin: 0 3px 0 0;
+    margin: 4px !important;
     min-width: 84px; /* be nice to Opera */
 }
 .ui-tabs-nav a, .ui-tabs-nav a span {
     display: block;
-    padding: 0 15px;
+    padding: 0 !important;
 }
 .ui-tabs-nav a {
     position: relative;
@@ -62,47 +56,39 @@
     padding-left: 0;
     line-height: 1.4;
     
-    font-size: 92%;
     font-weight: bold;
     text-align: center;
     text-decoration: none;
     white-space: nowrap; /* required in IE 6 */
-    border-top: 1px solid #c5dbec;
-    border-left: 1px solid #c5dbec;
-    border-right: 1px solid #c5dbec;
-    border-bottom: 0;
-    background: #dfeffc;
-    color: #2e6e9e;
+    background: #eee;
+    color: #999;
+    border: 0;
+    font-size: 85%;
     
-    -moz-border-radius-topleft: 4px;
-    -moz-border-radius-topright: 4px;
-    -webkit-border-radius-top-left: 4px;
-    -webkit-border-radius-top-right: 4px;
+    -moz-border-radius: 20px;
+    -webkit-border-radius: 20px;
 }
-.ui-tabs-nav .ui-tabs-selected {}
-.ui-tabs-nav .ui-tabs-selected a, .ui-tabs-nav .ui-tabs-selected a:hover {
+.ui-tabs-nav .ui-tabs-selected,
+.ui-tabs-nav .ui-tabs-selected a,
+.ui-tabs-nav .ui-tabs-selected a:hover {
     outline: 0; /* prevent dotted border in Firefox */
-    
-	background: #587498;
-	color: #eee;
-	border-top: 1px solid #587498;
-	border-left: 1px solid #587498;
-	border-right: 1px solid #587498;
-	border-bottom: 0;
 	
-	-moz-border-radius-topleft: 4px;
-    -moz-border-radius-topright: 4px;
-    -webkit-border-radius-top-left: 4px;
-    -webkit-border-radius-top-right: 4px;
+	background: #999;
+    border: 0;
+    color: #eee;
+	
+	-moz-border-radius: 20px;
+    -webkit-border-radius: 20px;
 }
 .ui-tabs-nav a:hover, .ui-tabs-nav a:active {
     outline: 0; /* prevent dotted border in Firefox */
     
-    background-color: #fdf5ce;
-	color: #c77405;
-	border-top: 1px solid #fbcb09;
-	border-left: 1px solid #fbcb09;
-	border-right: 1px solid #fbcb09;
+    background-color: #ccc;
+	color: #eee;
+	border: 0;
+	
+	-moz-border-radius: 20px;
+    -webkit-border-radius: 20px;
 }
 
 .ui-tabs-disabled a {
@@ -124,12 +110,11 @@
 .ui-tabs-nav .ui-tabs-disabled a:active {}
 
 .ui-tabs-nav a span {
-    width: 64px; /* IE 6 treats width as min-width */
     min-width: 64px;
-    height: 21px; /* IE 6 treats height as min-height */
-    min-height: 21px;
-    padding-top: 4px;
-    padding-right: 0;
+    height: 20px; /* IE 6 treats height as min-height */
+    min-height: 20px;
+    line-height: 19px;
+    padding: 0 10px !important;
 }
 *>.ui-tabs-nav a span { /* hide from IE 6 */
     width: auto;
@@ -160,7 +145,6 @@
 .ui-tabs-panel {
     padding: .5em 8px;
     
-    border-top: 3px solid #587498;
     background: #fff; /* declare background color for container to avoid distorted fonts in IE while fading */
 }
 .ui-tabs-loading em {
